tests/auto/qml/qmlcppcodegen/tst_qmlcppcodegen.cpp
@@ -101,6 +101,7 @@ private slots:
     void deduplicateConversionOrigins();
     void destroyAndToString();
     void detachOnAssignment();
+    void detachedListAssignment();
     void detachedReferences();
     void dialogButtonBox();
     void disappearingArrowFunction();
@@ -1778,6 +1779,33 @@ void tst_QmlCppCodegen::detachOnAssignment()
 
     QCOMPARE(o->property("v").value<QVariantList>()[0], QStringLiteral("a"));
     QCOMPARE(p->things()[0], QStringLiteral("c"));
+}
+
+void tst_QmlCppCodegen::detachedListAssignment()
+{
+    QQmlEngine engine;
+    QQmlComponent c(&engine, QUrl(u"qrc:/qt/qml/TestTypes/detachedListAssignment.qml"_s));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+
+    QScopedPointer<QObject> o(c.create());
+    QVERIFY(o);
+    QCOMPARE(o->property("changes").toInt(), 0);
+
+    QTest::ignoreMessage(QtDebugMsg, "Return value (l): 2");
+    QTest::ignoreMessage(QtDebugMsg, "root.testProp before assigning l: 0");
+    QTest::ignoreMessage(QtDebugMsg, "root.testProp after assigning l: 2");
+    QMetaObject::invokeMethod(o.data(), "testF");
+
+    // Changes only once in total, not once per element added
+    QCOMPARE(o->property("changes").toInt(), 1);
+
+    QTest::ignoreMessage(QtDebugMsg, "Return value (l): 2");
+    QTest::ignoreMessage(QtDebugMsg, "root.testProp before assigning l: 2");
+    QTest::ignoreMessage(QtDebugMsg, "root.testProp after assigning l: 2");
+    QMetaObject::invokeMethod(o.data(), "testG");
+
+    // No further changes: The lists stay the same
+    QCOMPARE(o->property("changes").toInt(), 1);
 }
 
 void tst_QmlCppCodegen::detachedReferences()
